--- a/Views/Pages/Order_List.ejs
+++ b/Views/Pages/Order_List.ejs
@@ -47,7 +47,128 @@ db.collection("Receipt")
         .then(snapshot => {
           snapshot.forEach(doc => {
             var element = doc.data()
-           if(element.status=="Đã giao"){
+            if(element.status=="Chờ xử lý"){
+            HTML += `
+            <tr role="row" >
+              <td style="width: 130px;text-align: center;padding-top: 33px;color: black;">
+             
+                `+ element.receiptID + `
+                
+
+
+
+                </td>
+                <td style="width: 130px;text-align: center;padding-top: 33px;color: black;">
+                  <select id="myDropDown" class="selectpicker btn-success" style="width: 117px;font-size: 16px;padding-left: 22px;"><option value=`+ element.status + `>`+ element.status + `</option></select>
+                  </td>
+
+    <td style="width: 130px;text-align: center;padding-top: 33px;color: black;">`+ element.totalPro + `</td>
+    <td style="width: 130px;text-align: center;padding-top: 33px;color: black;">`+ element.totalPrice+ `</td>
+    <td style="width: 130px;text-align: center;padding-top: 33px;color: black;">`+ element.date + `</td>
+   
+    <td style="width:200px;text-align: center;padding-top: 33px">
+      <button type="button" class="btn btn-info" data-toggle="modal" data-target="#` + element.receiptID + `"> 
+        Chi Tiết </button>        
+        <a href="./editfeedback/?id=`+ element._id_feedback + `"><button class="btn btn-success" type="reset">Sửa</button></a>
+        <a href="./deletefeedback/?id=`+ element._id_feedback + `"><button onclick=" return confirm('Bấm vào là xóa đó nha????')" type="button"
+          class="btn btn-danger">Xóa</button></a>
+
+    </td>
+    <div class="modal fade" id="` + element.receiptID + `" tabindex="-1" role="dialog"  aria-hidden="true">    <div class="modal-dialog" style="width: 700px;">
+    
+      <!-- Modal content-->
+      <div class="modal-content">
+        <div class="modal-header" style="background: aqua;padding-left: 120PX;">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <div class="modal-title"
+          style="margin-right: 120px;
+            color: red;
+            font-weight: 800;
+            font-size: 24px;
+            font-family: cursive;"
+           
+          >
+            Chi Tiết Hóa Đơn
+            
+                <select id="myDropDown" class="selectpicker btn btn-primary" style="width: 117px;font-size: 16px;PADDING-LEFT: 25PX;MARGIN-LEFT: 35PX;"><option value=`+ element.status + `>`+ element.status + `</option></select>  
+
+          
+
+            </div>
+           
+         
+
+      
+        </div>
+
+
+        
+        <div class="modal-body" style="padding-left: 44px;background: yellow;">
+                <div class="content">
+                    <form class="form-horizontal form-label-left input_mask" method="post" action="./addfood" enctype="multipart/form-data">
+                      <div class="form-group">
+                                <label class="control-label" style="font-weight: bold; margin-left: 16px;font-family: cursive;color: red;font-size: 17px;">Mã Hóa Đơn:<span class="required"></span>
+                                </label>
+                                <div  class="col-md-9 col-sm-9 col-xs-12">
+                                  <input type="text" style="width: 400px;color: black;background: antiquewhite;" disabled class="form-control" value="`+ element.receiptID + `">
+                                </div>
+                        </div>
+                       
+                        <div class="form-group">
+                                <label class="control-label" style="font-weight: bold; margin-left: 16px;font-family: cursive;color: red;font-size: 17px;">Số Sản Phẩm Đã Mua(`+ element.totalPro+ `):<span class="required"></span>
+                                </label>
+                                <div  class="col-md-9 col-sm-9 col-xs-12">
+                                  <textarea rows="4" cols="50" style="width: 400px;color: black;background: antiquewhite;" disabled class="form-control" value="">`+ element.orders+ `</textarea>
+                                  
+                                  
+                                </div>
+                        </div>
+                        <div class="form-group">
+                                <label class="control-label" style="font-weight: bold; margin-left: 16px;font-family: cursive;color: red;font-size: 17px;">Tổng Tiền Thanh Toán:<span class="required"></span>
+                                </label>
+                                <div  class="col-md-9 col-sm-9 col-xs-12">
+                                  <input type="text" style="width: 400px;color: black;background: antiquewhite;" disabled class="form-control" value="`+ element.totalPrice+ `">
+                                </div>
+                        </div>
+                        <div class="form-group">
+                                <label class="control-label" style="font-weight: bold; margin-left: 16px;font-family: cursive;color: red;font-size: 17px;">Địa Chỉ Giao Hàng: <span class="required"></span>
+                                </label>
+                                <div  class="col-md-9 col-sm-9 col-xs-12">
+                                  <input type="text" style="width: 400px;color: black;background: antiquewhite;" disabled class="form-control" value="`+ element.deliveryAdd+ `">
+                                </div>
+                        </div>
+                        <div class="form-group">
+                                <label class="control-label" style="font-weight: bold; margin-left: 16px;font-family: cursive;color: red;font-size: 17px;">Mã Khách Hàng: <span class="required"></span>
+                                </label>
+                                <div  class="col-md-9 col-sm-9 col-xs-12">
+                                  <input type="text" style="width: 400px;color: black;background: antiquewhite;" disabled class="form-control" value="`+ element.userID+ `">
+                                </div>
+                        </div>
+                        <label class="control-label" style="font-weight: bold; margin-left: 16px;font-family: cursive;color: red;font-size: 17px;">Ngày Nhận Hóa Đơn:<span class="required"></span>
+                                </label>
+                                <div  class="col-md-9 col-sm-9 col-xs-12">
+                                  <input type="text" style="width: 400px;color: black;background: antiquewhite;" disabled class="form-control" value="`+ element.date+ `">
+                                </div>
+                        </div>
+                      
+                        
+                     
+                </div>
+            </div>
+
+
+
+        <div class="modal-footer" style="background: aqua;">
+          <button type="button"  class="btn btn-danger" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+      
+    </div>
+ 
+    </tr>
+      `;
+           }
+           else if(element.status=="Đã giao"){
             HTML += `
             <tr role="row" >
               <td style="width: 130px;text-align: center;padding-top: 33px;color: black;">
