--- a/Views/Pages/Admin_List.ejs
+++ b/Views/Pages/Admin_List.ejs
@@ -57,7 +57,7 @@ db.collection("Admin")
 <td style="width: 250px;text-align: center;padding-top: 33px;color: black;">`+ element.Time + `</td>
 <td style="width:300px;text-align: center;padding-top: 33px">
   <a href="./edituser_admin/?id=`+ element.id + `"><button onclick=" return confirm('Bấm vào là Sửa đó nha????')" class="btn btn-success" type="reset">Sửa</button></a>
-  <a href="./delete/?id=`+ element.id + `&&url=` + element.url + `"><button onclick=" return confirm('Bấm vào là xóa đó nha????')" type="button"
+  <a href="./deleteuser_admin/?id=`+ element.id + `&&url=` + element.url + `"><button onclick=" return confirm('Bấm vào là xóa đó nha????')" type="button"
       class="btn btn-danger">Xóa</button></a>
 </td>
 </tr>
