--- a/Views/Block/Header.ejs
+++ b/Views/Block/Header.ejs
@@ -68,7 +68,7 @@
       <div class="dropdown dropdown-profile">
         <a href="" class="nav-link nav-link-profile" data-toggle="dropdown">
 
-          <img src="./Upload/<%=image%>" class="wd-50 rounded-circle" alt="">
+          <img src="<%=image%>" class="wd-50 rounded-circle" alt="">
           <span class="logged-name"><span class="hidden-xs-down"><%=user%></span> <i class="fa fa-angle-down mg-l-3"></i></span>
         </a>
         <div class="dropdown-menu wd-200">
