--- a/Views/Block/Left-Sidebar.ejs
+++ b/Views/Block/Left-Sidebar.ejs
@@ -66,10 +66,8 @@
           <span>Thống Kê</span>
         </a>
         <ul class="nav-sub">
-          <li class="nav-item"><a href="chart-morris.html" class="nav-link">Tổng Sản Phẩm Có Trong Từng Loại</a></li>
-          <li class="nav-item"><a href="chart-flot.html" class="nav-link">Số Sản Phẩm Đang Sale</a></li>
-          <li class="nav-item"><a href="chart-chartjs.html" class="nav-link">Doanh Thu</a></li>
-          <li class="nav-item"><a href="chart-rickshaw.html" class="nav-link">Sản Phẩm Còn Nhiều</a></li>
+          <li class="nav-item"><a href="./chart" class="nav-link">Doanh Thu Ngày</a></li>
+
           
         </ul>
       </li><!-- nav-item -->
