--- a/Views/Pages/Statistical.ejs
+++ b/Views/Pages/Statistical.ejs
@@ -13,6 +13,7 @@
         <canvas id="mychart">
 
         </canvas>
+       
         <script>
             let mychart=document.getElementById('mychart').getContext('2d')
             let barchart= new Chart(mychart,{
@@ -41,7 +42,44 @@
                 },
                 option:{}
             }) 
+
+          
         </script>
+    </div>
+    <div class="container">
+            <canvas id="mychart1">
+
+                </canvas>
     </div>
 </body>
 </html>
+
+<script>
+  let mychart1=document.getElementById('mychart1').getContext('2d')
+            let barchart= new Chart(mychart1,{
+                type:'line',
+                data:{
+                    labels:['tháng 11','tháng 12','tháng 13','tháng 14'],
+                    datasets:[{
+                        label:'Thống Kê Doanh Thu',
+                        data:[
+                            500,
+                            400,
+                            300,
+                            212,
+                        ],
+                        backgroundColor:[
+                            'rgba(255,99,132,0.6)',
+                            'rgba(45,162,235,0.6)',
+                            'rgba(20,206,86,0.6)',
+                            'rgba(255,99,86,0.6)'
+                        ],
+                        borderWidth:4,
+                        borderColor:'#777',
+                        hoverBorderWidth:3,
+                        hoverBorderColor:'#000'
+                    }]
+                },
+                option:{}
+            }) 
+</script>
