--- a/Views/Pages/Product_List.ejs
+++ b/Views/Pages/Product_List.ejs
@@ -6,11 +6,38 @@
 <script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-firestore.js"></script>
 
 <script> 
-  
-  // // Use of function Date.now() 
-  // var A = Date.now(); 
-  // var b=A.toString()
- 
+  function setCookie(cname,cvalue,exdays) {
+  var d = new Date();
+  d.setTime(d.getTime() + (exdays*24*60*60*1000));
+  var expires = "expires=" + d.toGMTString();
+  document.cookie = cname + "=" + cvalue + ";" + expires + ";path=/";
+}
+  function getCookie(cname) {
+  var name = cname + "=";
+  var decodedCookie = decodeURIComponent(document.cookie);
+  var ca = decodedCookie.split(';');
+  for(var i = 0; i < ca.length; i++) {
+    var c = ca[i];
+    while (c.charAt(0) == ' ') {
+      c = c.substring(1);
+    }
+    if (c.indexOf(name) == 0) {
+      return c.substring(name.length, c.length);
+    }
+  }
+  return "";
+}
+  function checkCookie() {
+  var user = getCookie("<%=username%>");
+  if (user != "") {
+   
+  } else {
+   
+    alert("Xin Chào: "+user)
+      setCookie("username", user, 365);
+    
+  }
+}
 
 
 
