--- a/Views/Statistical.ejs
+++ b/Views/Statistical.ejs
@@ -58,9 +58,10 @@ db.collection("Product")
                     labels:name,
                     datasets:[{
                         label:'Thống Kê Doanh Thu',
-                        data:price
+                        data:price,name
                            
                         ,
+                    
                         backgroundColor:[
                             'rgba(255,99,132,0.6)',
                             'rgba(45,162,235,0.6)',
