--- a/Views/Pages/User_List.ejs
+++ b/Views/Pages/User_List.ejs
@@ -199,6 +199,15 @@ $(document).ready(function(){
 
 
  </script>
+    <script>
+      $("#mydata").dataTable({
+          "pageLength": 4
+          ,
+        
+      }
+          
+      );
+  </script>
 <script src="./js/jquery.js"></script>
 <script src="./js/Bootsrap/js/bootstrap.min.js"></script>
 <script src="./js/DataTables/DataTables-1.10.20/js/jquery.dataTables.min.js"></script>
