--- a/Views/Block/Left-Sidebar.ejs
+++ b/Views/Block/Left-Sidebar.ejs
@@ -66,7 +66,15 @@
           <span>Thống Kê</span>
         </a>
         <ul class="nav-sub">
-          <li class="nav-item"><a href="./chart" class="nav-link">Doanh Thu Ngày</a></li>
+          <li class="nav-item"><a href="./chart" class="nav-link">Giá Sản Phẩm</a></li>
+          <li class="nav-item"><a href="./chart" class="nav-link">Sản Phẩm Yêu Thích</a></li>
+          <li class="nav-item"><a href="./chart" class="nav-link">Số Lượng User Thành Viên</a></li>
+
+          <li class="nav-item"><a href="./chart" class="nav-link">Số Hóa Đơn</a></li><!-- user nào mua hàng nhiều nhất,  --> 
+
+          <li class="nav-item"><a href="./chart" class="nav-link">Doanh Thu Theo Ngày</a></li>
+          <li class="nav-item"><a href="./chart" class="nav-link">Doanh Thu Theo Tháng</a></li>
+
 
           
         </ul>
