--- a/Views/Pages/Edit_Product.ejs
+++ b/Views/Pages/Edit_Product.ejs
@@ -64,7 +64,7 @@
                 <div class="col-md-6 col-sm-6 col-xs-12">
                   <input type="datetime-local" id="startsale" required="required" style="width: 450px;"
                     name="startsale_old" class="form-control" value="<%=time_start%>T<%=hour_start%>" disabled>
-                  <input type="datetime" id="startsale" style="width: 450px;" name="startsale" class="form-control">
+                  <input type="datetime-local" id="startsale" style="width: 450px;" name="startsale" class="form-control">
 
                 </div>
               </div>
