--- a/Views/Pages/Edit_Product1.ejs
+++ b/Views/Pages/Edit_Product1.ejs
@@ -311,6 +311,7 @@ if (distance < 0) {
   endSale:"",
   startSale:"",
   discount:0,
+  date:ts,
   })
   clearInterval(x);
   alert("Đến Thời Gian Khuyến Mãi")
