--- a/Views/Block/Left-Sidebar.ejs
+++ b/Views/Block/Left-Sidebar.ejs
@@ -66,7 +66,7 @@
           <span>Thống Kê</span>
         </a>
         <ul class="nav-sub">
-          <li class="nav-item"><a href="./chart" class="nav-link">Giá Sản Phẩm</a></li>
+          <li class="nav-item"><a href="./chart/statistical_pricet" class="nav-link">Giá Sản Phẩm</a></li>
           <li class="nav-item"><a href="./chart" class="nav-link">Sản Phẩm Yêu Thích</a></li>
           <li class="nav-item"><a href="./chart" class="nav-link">Số Lượng User Thành Viên</a></li>
 
